small changes, centred canvas

--- a/rolling_dice.html
+++ b/rolling_dice.html
@@ -4,7 +4,7 @@
     <title>ROLLING DICE</title>
   </head>
 
-  <body>
+  <body id="demo">
     <script type="text/javascript" src="libs/phaser.min.js"></script>
     <script type="text/javascript" src="rolling_dice/Dice.js"></script>
     <script type="text/javascript" src="rolling_dice/rolling_dice.js"></script>
