check in before changing Square positioning

--- a/drag_square.html
+++ b/drag_square.html
@@ -6,6 +6,7 @@
 
   <body id="demo">
     <script type="text/javascript" src="libs/phaser.min.js"></script>
+    <script type="text/javascript" src="drag_square/Square.js"></script>
     <script type="text/javascript" src="drag_square/drag_square.js"></script>
       
   </body>
