sneaky update, ninja moves to mouse now

--- a/arena_shooter.html
+++ b/arena_shooter.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset = "UTF-8"/>
-    <title>DRAG THE SQUARE</title>
+    <title>MOVE AND SHOOT</title>
   </head>
 
   <body id="demo">
