better following, hidden cursor

--- a/drag_square.html
+++ b/drag_square.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="drag_square/Square.js"></script>
     <script type="text/javascript" src="drag_square/drag_square.js"></script>
       
+    <style>
+      * {cursor: none;}
+    </style>
   </body>
     
 </html>
