--- a/arena_shooter.html
+++ b/arena_shooter.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="libs/phaser.min.js"></script>
     <script type="text/javascript" src="arena_shooter/Boot.js"></script>
     <script type="text/javascript" src="arena_shooter/Preloader.js"></script>
+    <script type="text/javascript" src="arena_shooter/MonsterSpawner.js"></script>
     <!--<script type="text/javascript" src="arena_shooter/MainMenu.js"></script>-->
     <script type="text/javascript" src="arena_shooter/Game.js"></script>
     <!--<script type="text/javascript" src="arena_shooter/arena_shooter.js"></script>-->
@@ -26,7 +27,7 @@
       //	You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
       game.state.add('Boot', ArenaShooter.Boot);
       game.state.add('Preloader', ArenaShooter.Preloader);
-      game.state.add('MainMenu', ArenaShooter.MainMenu);
+      //game.state.add('MainMenu', ArenaShooter.MainMenu);
       game.state.add('Game', ArenaShooter.Game);
       
       //	Now start the Boot state.
