--- a/explore_the_farm.html
+++ b/explore_the_farm.html
@@ -22,7 +22,7 @@
       //	Create your Phaser game and inject it into the gameContainer div.
       //	We did it in a window.onload event, but you can do it anywhere 
       // (requireJS load, anonymous function, jQuery dom ready, - whatever floats your boat)
-      var game = new Phaser.Game(800, 600, Phaser.AUTO, "demo");
+      var game = new Phaser.Game(800, 600, Phaser.CANVAS, "demo");
       
       //	Add the States your game has.
 
