--- a/explore_the_farm.html
+++ b/explore_the_farm.html
@@ -5,7 +5,8 @@
   </head>
 
   <body>
-    <script type="text/javascript" src="libs/phaser.min.js"></script>
+    <!--<script type="text/javascript" src="libs/phaser.min.js"></script>-->
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
     <script type="text/javascript" src="explore_the_farm/Boot.js"></script>
     <script type="text/javascript" src="explore_the_farm/Preloader.js"></script>
     <!--<script type="text/javascript" src="explore_the_farm/MainMenu.js"></script>-->
