quick fix for tablet/mobile users

--- a/explore_the_farm.html
+++ b/explore_the_farm.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
     <script type="text/javascript" src="explore_the_farm/Boot.js"></script>
     <script type="text/javascript" src="explore_the_farm/Preloader.js"></script>
-    <!--<script type="text/javascript" src="explore_the_farm/MainMenu.js"></script>-->
+    <script type="text/javascript" src="explore_the_farm/MainMenu.js"></script>
     <script type="text/javascript" src="explore_the_farm/Game.js"></script>
       
     
@@ -29,7 +29,7 @@
 
       game.state.add('Boot', TilemapTowns.Boot);
       game.state.add('Preloader', TilemapTowns.Preloader);
-      //game.state.add('MainMenu', TilemapTowns.MainMenu);
+      game.state.add('MainMenu', TilemapTowns.MainMenu);
       game.state.add('Game', TilemapTowns.Game);
 
       //	Now start the Boot state.
