--- a/makeshift_scrolling.html
+++ b/makeshift_scrolling.html
@@ -10,8 +10,8 @@
         canvas {border : 1px solid black;}
       </style>
 
-    <!--<script type="text/javascript" src="libs/phaser.min_2.07.js"></script>-->
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>
+    <script type="text/javascript" src="libs/phaser.min_2.07.js"></script>
+    <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>-->
     <script type="text/javascript" src="makeshift_scrolling/Scrollpane.js"></script>
     <script type="text/javascript" src="makeshift_scrolling/makeshift_scrolling.js"></script>
 
