--- a/makeshift_scrolling.html
+++ b/makeshift_scrolling.html
@@ -12,6 +12,7 @@
 
     <script type="text/javascript" src="libs/phaser.min_2.07.js"></script>
     <!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.0.6/phaser.min.js"></script>-->
+    <script type="text/javascript" src="makeshift_scrolling/Pane.js"></script>
     <script type="text/javascript" src="makeshift_scrolling/Scrollpane.js"></script>
     <script type="text/javascript" src="makeshift_scrolling/makeshift_scrolling.js"></script>
 
