minor changes to centering canvas

--- a/makeshift_scrolling.html
+++ b/makeshift_scrolling.html
@@ -4,7 +4,8 @@
     <title>Makeshift Scrolling</title>
   </head>
 
-  <body id="game">
+  <body>
+    <div id="demo" class="js_centred">
 
       <style>
         canvas {border : 1px solid black;}
@@ -16,6 +17,7 @@
     <script type="text/javascript" src="makeshift_scrolling/Scrollpane.js"></script>
     <script type="text/javascript" src="makeshift_scrolling/makeshift_scrolling.js"></script>
 
+    </div>
   </body>
   
 </html>
